examples/edgio-nextjs-commerce-example/packages/spree/dist/errors/UserTokenResponseParseError.js
class UserTokenResponseParseError extends Error {
}
export { UserTokenResponseParseError as default };
